dotenv add remove prod localS

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.6.0
 Django==4.2
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 Pillow==9.5.0
+PyJWT==2.6.0
+python-dotenv==1.0.0
 pytz==2023.3
 sqlparse==0.4.4
